# ReperooV2

./: CHANGELOG.md  Makefile  README.md  WORKFLOW.md  docker-compose.yml  stage_1_hero_assets_developer_spec.md
apps/api/: .env.example  .example_env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  cloudbuild.yaml  pyproject.toml  pytest.ini  set_level.py  set_streak.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 046b6667cc31_change_occurred_at_to_date.py  135cdb973a1c_add_budget_plan.py  202501112148_create_profiles_table.py  274afe1fa989_change_column_icon_to_color_income_.py  31d37cdd3d6c_init.py  54e884afa902_add_income_categories_table.py  56c68f1f4c63_add_experience_gamification_system.py  615f155d95c8_add_timezone_to_profiles.py  719fb9e122c7_change_recurring_template_dates_to_date.py  8b003cd27c50_add_budget_plan_fields.py  8f4f2038ed89_add_spending_categories.py  9ffccc7559b4_rename_spending_to_expense.py  b2f1c0b9a7d2_seed_spending_categories.py  bd66a81ff298_add_recurring_fields_to_transactions.py  c637ba4a0636_add_transactions_table.py  c7a4d31c2b6f_add_spending_subcategories.py  d9a8f4c1c0e5_seed_spending_subcategories.py  e2b8a1c3d4f5_seed_expense_categories.py  e6058eb8d90b_remove_payday_fields_from_budget_plans.py  e9a62dba8763_create_recurring_templates_table.py  f1c2d3e4f5a6_seed_income_categories.py
apps/api/scripts/: run_migrations.sh
apps/api/src/: main.py  test_main.py
apps/api/src/cli/: generate_recurring_transactions.py
apps/api/src/core/: auth.py  database.py  (+2 more)
apps/api/tests/: README.md  test_timezone_integration.py
(+341 files in other folders)
