[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "python-dotenv>=1.1.1",
    "supabase>=2.18.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator==0.33.0",
    "ruff>=0.14.3",
]
